# RiTINI

./: .gitignore  README.md  dynamics.py  focus_gene_storyboard_viz.py  gene_dynamics.py  gene_trajectory_viz.py  gene_viz.py  graph_inference.py  main.py  prepare_data.py  preprocess.py  preprocess_data.py  pyproject.toml  test_toy_data_ritini.py  train.py  training_history_genes.json  viz.py
config/: config.yaml
configs/: config.yaml  visualization.yaml
data/: __init__.py  data.py
examples/: RiTINI.ipynb  gene_graph_example.py  quick_demo.py  train_model.py
notebooks/: 0.01_preprocess_traj.ipynb  0.0_preprocess_adata.ipynb  01_utils.ipynb  02_gcn.ipynb  03_gde.ipynb  04_odeblock.ipynb  05_gat.ipynb  06_data.ipynb  07_plots.ipynb  08_graph.ipynb  09_dgl.ipynb  1.0-jcr-preprocessing-natalia.ipynb  highly_variable_genes.ipynb  natalia_trajectory_loading.ipynb  preprocessing_files.ipynb  sergio_tree.ipynb  sergio_tree_bifurcation.ipynb  toy_data.ipynb  toy_data_results.ipynb  trajectory_1_natalia.npy  trajectory_1_natalia_gene_names
notebooks/data/toy_data/: all_node_features.npy
ritini/: __init__.py  api.py  ritini.py  train.py
ritini/data/: temporal_graph.py  trajectory_loader.py
ritini/data_generation/: __init__.py  gene.py  sergio.py  toy_data.py
ritini/models/: RiTINI.py  __init__.py  factory.py  gat.py  gatConvWithAttention.py  gatConvwithAttention.py  gcn.py  gde.py  graph.py  graphDifferentialEquation.py  meanAttentionLayer.py  ode.py  odeblock.py  pyg.py  time_attention.py
ritini/utils/: __init__.py  attention_graphs.py  data_processing.py  plots.py  preprocess.py  prior_graph.py  utils.py  visualization.py
ritini/visualizations/: graph_visualizations.py  visualize_dynamics_prediction.py  visualize_graphs_attention_gat.py  visualize_graphs_attention_ritini.py  visualize_graphs_attention_ritini_toy.py  visualize_graphs_temporal_gat.py  visualize_graphs_toy_data.py  visualize_natalia_ritini.py  visualize_toy_data.py
scripts/: run_ritini_visualization.sh
tests/: __init__.py  test_basic.py  test_real_data_gat.py  test_toy_data_gat.py  test_toy_data_ritini.py
