[project]
name = "RiTINI"
version = "0.1.0"
description = "Regulatory Temporal Interaction Network Inference using Neural ODEs and Graph Neural Networks"
readme = "README.md"
requires-python = ">=3.9"
license-files = ["LICENSE.md"]
keywords = ["neural-ode", "graph-neural-networks", "regulatory-networks", "temporal-networks", "bioinformatics"]

authors = [
    {name = "Dhananjay Bhaskar"},
    {name = "Sumner Magruder"},
    {name = "Joao Felipe Rocha", email = "joao.felipe@yale.edu"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "torchdiffeq>=0.2.0",
    "torch-geometric>=2.3.0",
    "networkx>=2.6.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "click>=8.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.62.0",
    "scikit-learn>=1.6.1",
]

[tool.setuptools]
packages = ["RiTINI"]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
]

docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
