[project]
name = "ritini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

requires-python = ">=3.10"

dependencies = [
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "pymetis>=2023.1.1",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "torchdiffeq>=0.2.3",
    "pytest>=8.4.2",
    "scanpy>=1.11.4",
    "scikit-misc>=0.5.1",
    "ipykernel>=6.30.1",
]

[tool.setuptools.packages.find]
include = ["ritini", "ritini.*"]
