[project]
name = "ritini"
version = "0.0.1"
description = "RiTINI is a Python package for modeling and analyzing gene regulatory networks from single cell trajectories."
readme = "README.md"
requires-python = ">=3.9"
# license = "LicenseRef-Yale-License"
license-files =["LICENSE.md"]
keywords = ["neural ode", "trajectory", "ritini", "gene regulatory", "single cell RNA", "graphs"]
authors = [
  {name = "bjoaofelipe", email = "joaofelipe.rocha@yale.edu"},
  {name = "siddharthviswanath", email = "siddharth.viswanath@yale.edu"}
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    # "License :: Yale License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "pymetis>=2023.1.1",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "torchdiffeq>=0.2.3",
    "scanpy>=1.11.4",
    "scikit-misc>=0.5.1",
    "pyyaml>=6.0.2",
]

[tool.setuptools.packages.find]
include = ["ritini", "ritini.*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.2",
]
